attribution class fixed for small screens

--- a/style/style.scss
+++ b/style/style.scss
@@ -109,6 +109,7 @@ span {
 .attribution {
   color: $White;
   text-align: center;
+  margin-top: 20px;
 
   a {
     color: $Very-dark-desaturated-blue;
